--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -29,7 +29,7 @@ jobs:
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
 
   enqueue:
-    if: ${{ fromJSON(needs.query.outputs.post_ids != [] }}
+    if: ${{ fromJSON(needs.query.outputs.post_ids) != [] }}
     needs: query
     runs-on: ubuntu-latest
     strategy:
