--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -23,7 +23,8 @@ jobs:
         run: |
           # ./tournament_questions.rb minibench
           # echo "POST_IDS=$(./tournament_questions.rb minibench)" >> $GITHUB_OUTPUT
-          echo "post_ids=[]" >> $GITHUB_OUTPUT
+          # echo "post_ids=[]" >> $GITHUB_OUTPUT
+          echo "post_ids=[578,22427]" >> $GITHUB_OUTPUT
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
