ci: add checkout step to scheduler workflow - Ensures workflow has access to repository files - Enables execution of local workflow files

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -37,6 +37,7 @@ jobs:
       matrix:
         post_id: ${{ fromJSON(needs.query.outputs.post_ids) }}
     steps:
+      - uses: actions/checkout@v5
       - uses: ./.github/workflows/forecast.yml
         with:
           post_id: ${{ matrix.post_id }}
