refactor(ci): fix nesting for scheduler workflow

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -36,8 +36,6 @@ jobs:
     strategy:
       matrix:
         post_id: ${{ fromJSON(needs.query.outputs.post_ids) }}
-    steps:
-      - uses: actions/checkout@v5
-      - uses: ./.github/workflows/forecast.yml
-        with:
-          post_id: ${{ matrix.post_id }}
+    uses: ./.github/workflows/forecast.yml
+    with:
+      post_id: ${{ matrix.post_id }}
