--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -3,13 +3,11 @@ name: Scheduler Testing
 on:
   workflow_dispatch:
 
-# prevent parallel runs
-concurrency:
-  group: ${{ github.workflow }}
-  cancel-in-progress: false
-
 jobs:
   query:
+    concurrency:
+      group: ${{ github.workflow }}
+      cancel-in-progress: false
     outputs:
       post_ids: ${{ steps.post_ids.outputs.post_ids }}
     runs-on: ubuntu-latest
@@ -35,6 +33,9 @@ jobs:
     strategy:
       matrix:
         post_id: ${{ fromJSON(needs.query.outputs.post_ids) }}
+    concurrency:
+      group: ${{ github.workflow }}-${{ matrix.post_id }}
+      cancel-in-progress: false
     uses: ./.github/workflows/forecast.yml
     with:
       post_id: ${{ matrix.post_id }}
