--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -36,6 +36,11 @@ jobs:
     concurrency:
       group: ${{ github.workflow }}-${{ matrix.post_id }}
       cancel-in-progress: false
+    env:
+      ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+      METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
+      METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
+      PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
     uses: ./.github/workflows/forecast.yml
     with:
       post_id: ${{ matrix.post_id }}
