fix: use secrets instead of env for api credentials - Corrected workflow credential configuration - Ensures proper handling of sensitive tokens

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -36,7 +36,7 @@ jobs:
     concurrency:
       group: ${{ github.workflow }}-${{ matrix.post_id }}
       cancel-in-progress: false
-    env:
+    secrets:
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
       METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
       METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
