ci: add api key secrets for workflow - introduce secrets for Anthropic, Metaculus, and Perplexity APIs - enable authenticated interactions with external services - support forecasting workflow with required credentials

--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -7,6 +7,15 @@ on:
         description: 'Metaculus post id to forecast:'
         required: true
         type: string
+    secrets:
+      ANTHROPIC_API_KEY:
+        required: true
+      METACULUS_BOT_API_TOKEN:
+        required: true
+      METACULUS_BOT_ID:
+        required: true
+      PERPLEXITY_API_KEY:
+        required: true
   workflow_dispatch:
     inputs:
       post_id:
