--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   query:
     concurrency:
-      group: ${{ github.workflow }}
+      group: ${{ github.workflow }}-query
       cancel-in-progress: false
     outputs:
       post_ids: ${{ steps.post_ids.outputs.post_ids }}
@@ -34,7 +34,7 @@ jobs:
       matrix:
         post_id: ${{ fromJSON(needs.query.outputs.post_ids) }}
     concurrency:
-      group: ${{ github.workflow }}-${{ matrix.post_id }}
+      group: ${{ github.workflow }}-enqueue
       cancel-in-progress: false
     secrets:
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
