--- a/.github/workflows/fall-aib-2025.yml
+++ b/.github/workflows/fall-aib-2025.yml
@@ -1,9 +1,9 @@
-name: minibench Executor
+name: fall-aib-2025 Executor
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "10/15 * * * *" # run every 15 minutes, starting at 10 past the hour
+    - cron: "5/15 * * * *" # run every 15 minutes, starting at 5 past the hour
 
 jobs:
   query:
@@ -21,7 +21,7 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - id: post_ids
         run: |
-          echo "post_ids=$(./tournament_questions.rb minibench)" >> $GITHUB_OUTPUT
+          echo "post_ids=$(./tournament_questions.rb fall-aib-2025)" >> $GITHUB_OUTPUT
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
