feat(workflow): update metaculus post id retrieval method
- Refactored GitHub Actions workflow to use `echo` for setting `post_ids` output
- Ensures more reliable extraction of Metaculus post IDs in CI/CD pipeline
- Maintains existing API query logic while improving output generation

--- a/.github/workflows/minibench.yml
+++ b/.github/workflows/minibench.yml
@@ -16,8 +16,8 @@ jobs:
     steps:
       - id: post_ids
         run: |
-          curl "https://www.metaculus.com/api/posts/?forecast_type=binary,discrete,multiple_choice,numeric&include_description=true&not_forecaster_id=$METACULUS_BOT_ID&offset=0&statuses=open&tournaments=minibench" -H "Authorization: Token $METACULUS_BOT_API_TOKEN" \
-            | jq -c '.results | map(.id)' >> $GITHUB_OUTPUT
+          echo "post_ids=$(curl "https://www.metaculus.com/api/posts/?forecast_type=binary,discrete,multiple_choice,numeric&include_description=true&not_forecaster_id=$METACULUS_BOT_ID&offset=0&statuses=open&tournaments=minibench" -H "Authorization: Token $METACULUS_BOT_API_TOKEN" \
+            | jq -c '.results | map(.id)')" >> $GITHUB_OUTPUT
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
