--- a/.github/workflows/fall-aib-2025.yml
+++ b/.github/workflows/fall-aib-2025.yml
@@ -14,14 +14,10 @@ jobs:
       post_ids: ${{ steps.post_ids.outputs.post_ids }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.4'
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - id: post_ids
         run: |
-          echo "post_ids=$(./tournament_questions.rb fall-aib-2025)" >> $GITHUB_OUTPUT
+          echo "post_ids=$(curl "https://www.metaculus.com/api/posts/?forecast_type=binary,discrete,multiple_choice,numeric&include_description=true&not_forecaster_id=$METACULUS_BOT_ID&offset=0&statuses=open&tournaments=fall-aib-2025" -H "Authorization: Token $METACULUS_BOT_API_TOKEN" \
+            | jq -c '.results | map(.id)')" >> $GITHUB_OUTPUT
         env:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
