--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -67,7 +67,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        forecaster_index: [0, 1, 2, 3]
+        forecaster_index: [0, 1, 2, 3, 4, 5]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v5
@@ -102,7 +102,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        forecaster_index: [0, 1, 2, 3]
+        forecaster_index: [0, 1, 2, 3, 4, 5]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v5
