--- a/.github/workflows/tournament.yml
+++ b/.github/workflows/tournament.yml
@@ -33,6 +33,7 @@ jobs:
       cancel-in-progress: false
     secrets:
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+      DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
       METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
       METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
       PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
