ci: add deepseek api key to forecast workflow
- Extends workflow secrets to support DeepSeek API integration
- Enables new AI model for forecasting process

--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -10,6 +10,8 @@ on:
     secrets:
       ANTHROPIC_API_KEY:
         required: true
+      DEEPSEEK_API_KEY:
+        required: true
       METACULUS_BOT_API_TOKEN:
         required: true
       METACULUS_BOT_ID:
