feat(workflow): update forecast summary jq parsing
- Enhance jq command to handle more diverse forecast JSON structures
- Support continuous_cdf, probability_yes, and probability_yes_per_category fields
- Improve forecast summary generation in GitHub Actions workflow

--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -170,7 +170,7 @@ jobs:
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
       - run: |
-          echo "$(cat tmp/${{ inputs.post_id }}/consensus/forecast.json | jq -r '.[] | .percentiles // .probabilities? // .probability_yes?')" >> $GITHUB_STEP_SUMMARY
+          echo "$(cat tmp/${{ inputs.post_id }}/consensus/forecast.json | jq -r '.[] | .continuous_cdf // .probability_yes // .probability_yes_per_category')" >> $GITHUB_STEP_SUMMARY
           echo '<details><summary>Prompt</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/inputs/consensus.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
