--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -35,10 +35,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/download-artifact@v5
+      - uses: actions/cache/restore@v4
         with:
-          merge-multiple: true
-          path: tmp
+          key: ${{ inputs.post_id }}/research.json
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -50,21 +49,18 @@ jobs:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
-      - uses: actions/upload-artifact@v4
+      - uses: actions/cache/save@v4
         with:
-          name: ${{ inputs.post_id }}.research
-          path: tmp
-      - if: hashFiles("tmp/${{ inputs.post_id }}/post.json") != ''
-        run: |
+          key: ${{ inputs.post_id }}/research.json
+          path: tmp/${{ inputs.post_id }}/research.json
+      - run: |
           echo "# $(cat tmp/${{ inputs.post_id }}/post.json | jq -r '.title')" >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/post.json | jq -r '.question.description')" >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/inputs/research.md") != ''
-        run: |
+      - run: |
           echo '<details><summary>Prompt</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/inputs/research.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/outputs/research.md") != ''
-        run: |
+      - run: |
           echo '<details><summary>Result</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/outputs/research.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
@@ -78,10 +74,12 @@ jobs:
         forecaster_index: [0, 1, 2, 3, 4, 5]
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/download-artifact@v5
+      - uses: actions/cache/restore@v4
         with:
-          name: ${{ inputs.post_id }}.research
-          path: tmp
+          key: ${{ inputs.post_id }}/research.json
+      - uses: actions/cache/restore@v4
+        with:
+          key: ${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -93,20 +91,17 @@ jobs:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
-      - uses: actions/upload-artifact@v4
+      - uses: actions/cache/save@v4
         with:
-          name: ${{ inputs.post_id}}.forecast.${{ matrix.forecaster_index }}
+          key: ${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
-      - if: hashFiles("tmp/${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json") != ''
-        run: |
+      - run: |
           ./forecast_result.rb ${{ inputs.post_id }} ${{ matrix.forecaster_index }} forecast >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/inputs/forecast.${{ matrix.forecaster_index }}.md") != ''
-        run: |
+      - run: |
           echo '<details><summary>Prompt</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/inputs/forecast.${{ matrix.forecaster_index }}.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/outputs/forecast.${{ matrix.forecaster_index }}.md") != ''
-        run: |
+      - run: |
           echo '<details><summary>Result</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/outputs/forecast.${{ matrix.forecaster_index }}.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
@@ -120,15 +115,17 @@ jobs:
         forecaster_index: [0, 1, 2, 3, 4, 5]
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/download-artifact@v5
+      - uses: actions/cache/restore@v4
         with:
-          name: ${{ inputs.post_id }}.research
-          path: tmp
-      - uses: actions/download-artifact@v5
+          key: ${{ inputs.post_id }}/research.json
+      - uses: actions/cache/restore@v4
         with:
-          merge-multiple: true
-          pattern: ${{ inputs.post_id }}.forecast.*
-          path: tmp/${{ inputs.post_id }}/forecasts
+          key: ${{ inputs.post_id }}/forecasts/forecast.X.json
+          restore-keys: |
+            ${{ inputs.post_id }}/forecasts/forecast.
+      - uses: actions/cache/restore@v4
+        with:
+          key: ${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -140,20 +137,17 @@ jobs:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
-      - uses: actions/upload-artifact@v4
+      - uses: actions/cache/save@v4
         with:
-          name: ${{ inputs.post_id }}.revision.${{ matrix.forecaster_index }}
+          key: ${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
-      - if: hashFiles("tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json") != ''
-        run: |
+      - run: |
           ./forecast_result.rb ${{ inputs.post_id }} ${{ matrix.forecaster_index }} revision >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/inputs/revision.${{ matrix.forecaster_index }}.md") != ''
-        run: |
+      - run: |
           echo '<details><summary>Prompt</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/inputs/revision.${{ matrix.forecaster_index }}.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/outputs/revision.${{ matrix.forecaster_index }}.md") != ''
-        run: |
+      - run: |
           echo '<details><summary>Result</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/outputs/revision.${{ matrix.forecaster_index }}.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
@@ -164,15 +158,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/download-artifact@v5
+      - uses: actions/cache/restore@v4
         with:
-          name: ${{ inputs.post_id }}.research
-          path: tmp
-      - uses: actions/download-artifact@v5
+          key: ${{ inputs.post_id }}/research.json
+      - uses: actions/cache/restore@v4
         with:
-          merge-multiple: true
-          pattern: ${{ inputs.post_id }}.revision.*
-          path: tmp/${{ inputs.post_id }}/forecasts
+          key: ${{ inputs.post_id }}/forecasts/revision.X.json
+          restore-keys: |
+            ${{ inputs.post_id }}/forecasts/revision.
+      - uses: actions/cache/restore@v4
+        with:
+          key: ${{ inputs.post_id }}/forecasts/consensus.json
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -184,21 +180,21 @@ jobs:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
-      - if: hashFiles("tmp/${{ inputs.post_id }}/consensus/forecast.json") != ''
-        run: |
+      - uses: actions/cache/save@v4
+        with:
+          key: ${{ inputs.post_id }}/forecasts/consensus.json
+          path: tmp/${{ inputs.post_id }}/forecasts/consensus.json
+      - run: |
           echo "$(cat tmp/${{ inputs.post_id }}/consensus/forecast.json | jq -r '.[] | .continuous_cdf // .probability_yes // .probability_yes_per_category')" >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/inputs/consensus.md") != ''
-        run: |
+      - run: |
           echo '<details><summary>Prompt</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/inputs/consensus.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/outputs/consensus.md") != ''
-        run: |
+      - run: |
           echo '<details><summary>Result</summary>' >> $GITHUB_STEP_SUMMARY
           echo "$(cat tmp/${{ inputs.post_id }}/outputs/consensus.md)" >> $GITHUB_STEP_SUMMARY
           echo '</details>' >> $GITHUB_STEP_SUMMARY
-      - if: hashFiles("tmp/${{ inputs.post_id }}/consensus/comment.json") != ''
-        run: |
+      - run: |
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "---" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
